[package]
name = "drogue-ajour-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
actix-cors = "0.6"
chrono = "0.4"
env_logger = "0.9"
log = "0.4"
serde = {version = "1", features = ["derive"] }
clap = { version = "3.0", features = ["derive"] }
serde_json = "1"
kube = { version = "0.74.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
ajour-schema = { path = "../schema" }
drogue-client = "0.10"
reqwest = "0.11"
anyhow = "1"
actix-web-httpauth = "0.8"
