[package]
name = "drogue-ajour-console"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1"
base64 = "0.13"
chrono = "0.4"
float-cmp = "0.9"
futures = "0.3"
gloo-storage = "0.2"
gloo-timers = { version = "0.2", features = ["futures"] }
gloo-utils = "0.1"
humantime = "2"
humantime-serde = "1"
itertools = "0.10"
js-sys = "0.3.50"
log = "0.4"
monaco = { version = "0.3", features = ["yew-components"] }
num-traits = "0.2"
patternfly-yew = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
strum = { version = "0.24", features = ["derive"] }
url = "2"
uuid = { version = "0.8", features = ["wasm-bindgen", "v4"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = "0.19"
yew-agent = "0.1"
yew-router = { version = "0.16", package = "yew-router-nested" }

# For wasm-bindgen we need the exact version, as it will be required by the wasm-pack tool.
# Updating this dependency requires:
#  * Update the dependency version here
#  * Create a new builder image, with the same version of wasm-bindgen pre-installed
wasm-bindgen = "=0.2.79"

web-sys = { version = "0.3", features = [
    "AbortController",
    "AbortSignal",
    "Headers",
    "Location",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "MessageEvent",
    "WebSocket",
    "Window",
] }

[dev-dependencies]
env_logger = "0.9"

[patch.crates-io]
patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "c45eaae43ba8c79cb1c1840deaa3138b7a05579b" }

[features]
default = []

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
