[package]
name = "drogue-firmware-endpoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.3"
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
oci-distribution = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.9"
