[package]
name = "drogue-ajour-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = { version = "0.11", default-features = false }
heapless = { version = "0.7", features = ["serde"] }

[dev-dependencies]
serde_cbor = { version = "0.11", features = ["std"] }

[features]
default = ["std"]
std = ["serde_bytes/std"]
