[package]
name = "drogue-ajour-protocol"
version = "0.1.0"
authors = ["Ulf Lilleengen <lulf@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A firmware update protocol designed for embedded devices"
repository = "https://github.com/drogue-iot/drogue-ajour"
homepage = "https://drogue.io"
keywords = ["dfu", "firmware", "ota", "embedded", "no_std"]
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = { version = "0.11", default-features = false }
heapless = { version = "0.7", features = ["serde"] }

[dev-dependencies]
serde_cbor = { version = "0.11", features = ["std"] }

[features]
default = ["std"]
std = ["serde_bytes/std"]
