[package]
name = "drogue-ajour-protocol"
version = "0.6.0"
authors = ["Ulf Lilleengen <lulf@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A firmware update protocol designed for embedded devices"
repository = "https://github.com/drogue-iot/drogue-ajour"
homepage = "https://drogue.io"
keywords = ["dfu", "firmware", "ota", "embedded", "no_std"]
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"], default-features = false }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
serde_cbor = { version = "0.11", features = ["std"] }

[features]
defmt = [
      "dep:defmt"
]
