[package]
name = "drogue-ajour"
version = "0.1.0"
edition = "2021"
description = "A firmware management service"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"]}
serde = {version = "1", features = ["derive"] }
serde_bytes = "0.11"
paho-mqtt = { version = "0.10", features = ["ssl"] }
serde_cbor = "0.11"
serde_json = "1"
hex = "0.4"
oci-distribution = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.9"
tar = "0.4"
flate2 = "1"
base64 = "0.13.0"
futures = "0.3"
cloudevents-sdk = "0.5"
embedded-update = { version = "0.6", default-features = false }
drogue-client = "0.10"
reqwest = {version = "0.11", default-features = false, features = ["json", "stream", "native-tls"]}
async-trait = "0.1"
chrono = "0.4"
lru = "0.7.3"
ajour-schema = { path = "../schema" }
